# ANGANGBOT

./: .env  .env.prod  .gitignore  .pre-commit-config.yaml  114514.bat  Dockerfile  LICENSE  README.md  README_old.md  bot.py  docker-compose.yml  enviroment.yml  pyproject.toml  requirements.txt  requirements_min.txt
.github/: release.yml
.github/ISSUE_TEMPLATE/: issue-template-question.md  issue-template-suggestion.md
.github/workflows/: build.yml  dependencies.yml  deploy.yml  release.yml
cache/: r6s.json
config/: learning_chat.yml  paimon_config.yml  paimon_greet.yml
config/plugins/: Genshin_Calendar.yml  Genshin_Voice.yml  Learning_Chat.yml  Mihoyo_bbs.yml  Paimon_Abyss.yml  Paimon_Autobbs.yml  Paimon_Bind.yml  Paimon_CloudGenshin.yml  Paimon_DailyNote.yml  Paimon_Gacha.yml  Paimon_Gacha_Log.yml  Paimon_Info.yml  Paimon_MonthInfo.yml  Paimon_Wiki.yml  alias_manager.yml  bot_manager.yml  news60s.yml  nonebot_plugin_couplets.yml  nonebot_plugin_myb_exchange.yml  tools.yml
config/plugins/HIDE/: Genshin_Calendar.yml  Genshin_Voice.yml  Mihoyo_bbs.yml  Paimon_Abyss.yml  Paimon_Autobbs.yml  Paimon_Bind.yml  Paimon_CloudGenshin.yml  Paimon_DailyNote.yml  Paimon_Gacha.yml  Paimon_Gacha_Log.yml  Paimon_Info.yml  Paimon_MonthInfo.yml  Paimon_Wiki.yml  alias_manager.yml
data/LittlePaimon/database/: genshin.db  learning_chat.db  manager.db  subscription.db
data/LittlePaimon/user_data/gacha_log_data/: gacha_log-77139032-102540131.json
data/setu4/: setu_perm_cfg.json
data/youth-version-of-setu4/: r18list.txt
menu_config/: config.json
menu_config/menus/: apexapi.json  chatgpt聊天.json  exmple.json  nonebot_plugin_drawer.json  wttr_weather.json  壁纸鉴赏.json  来点涩图.json
napcat/: docker.sh
src/libraries/: image.py  markdown_renderer.py
src/plugins/: check_gocq.py  check_gocq.py.idea  plugins.md  public.py
src/plugins/Coins/: __init__.py  database.py
src/plugins/nonebot-plugin-random/: __init__.py  depends.py  download.py  matchers.py  models.py  utils.py
src/plugins/nonebot_plugin_HttpCat/: __init__.py  httpcat.py
src/plugins/nonebot_plugin_animalVoice/: __init__.py  animalvoice_main.py  cheru_main.py  converter.py  main.py
src/plugins/nonebot_plugin_animalVoice/AnimalVoice/: __init__.py  converter.py
src/plugins/nonebot_plugin_couplets/: README.md  __init__.py  pyproject.toml
src/plugins/nonebot_plugin_eventdone/: __init__.py  config.py
src/plugins/nonebot_plugin_setu4/: __init__.py  config.py  fetch_resources.py  get_data.py  setu_message.py
src/plugins/wallpaper/: __init__.py  config.py  exchange.py  get.py  limiter.py  post.py  scheduler.py  utils.py
(+2 files in other folders)
