[project]
name = "ANGANGBOT"
version = "2.3.5"
description = "基于NoneBot2的交互bot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]

[tool.poetry]
name = "angangbot"
version = "2.3.5"
description = "基于NoneBot2的交互bot"
authors = ["angjustinl <angjustin@163.com>"]
license = "AGPL-3.0"
readme = "README.md"

[[tool.poetry.source]]
name = "aliyun"
default = true
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.26.0"
nb-cli = "1.3.1"
pillow = "^9.2.0"
nonebot-adapter-onebot = "^2.4.0"
nonebot-plugin-apscheduler = "^0.4.0"
nonebot2 = {extras = ["fastapi"], version = "^2.1.3"}
nonebot-plugin-guild-patch = "^0.2.3"
nonebot-plugin-PicMenu = "^0.2"
nonebot-plugin-weather-lite = "^0.0.1"
nonebot-plugin-pixivbot = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
