[project]
name = "ANGANGBOT"
version = "3.0.0"
description = "基于NoneBot2的交互bot"
readme = "README.md"
requires-python = ">=3.11, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_sentry", "YetAnotherPicSearch"]
plugin_dirs = []
builtin_plugins = []
