[project]
name = "ANGANGBOT"
version = "3.1.0"
description = "基于NoneBot2的交互bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "html2image>=2.0.7",
    "jieba>=0.42.1",
    "linkify-it-py>=2.0.3",
    "markdown-it-py>=4.0.0",
    "mdit-py-plugins>=0.5.0",
    "nb-cli>=1.4.2",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-alconna>=0.60.1",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-plugin-parser",
    "nonebot-plugin-sentry>=2.0.0",
    "nonebot2[fastapi,httpx]>=2.4.3",
    "openai>=2.6.0",
    "parsel>=1.10.0",
    "pillow>=12.0.0",
    "pygments>=2.19.2",
    "sqlalchemy>=2.0.44",
    "yetanotherpicsearch>=2.0.10",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_sentry", "YetAnotherPicSearch", "nonebot_plugin_parser"]
plugin_dirs = []
builtin_plugins = []

[tool.ruff]
# 禁用 T201 规则（print 语句警告）
ignore = ["T201"]

[tool.uv.sources]
nonebot-plugin-parser = { git = "https://github.com/fllesser/nonebot-plugin-parser.git", rev = "master" }
